# nitrokey-3-tests

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  conftest.py  dev-requirements.txt  entrypoint  pyproject.toml  requirements.txt  test-local.sh  test-release.sh  test_basic.py  test_upgrade.py
data/: fido.key.license
stubs/: pexpect.pyi
tests/: basic.py  basic_ssh.py  ctap2.py  secrets_app_tests.py  touch.py  upgrade.py
tests/default/: basic.py  upgrade.py
utils/: __init__.py  device.py  fido2.py  ssh.py  subprocess.py  upgrade.py
